--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bg-blue-900 shadow-lg">
-    <div class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-center">
+    <div class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-end md:justify-center">
         <span class="text-sm text-white sm:text-center">© {{ date }} <a routerLink="/"
                 class="hover:underline">E-Learning</a>. All Rights Reserved.
         </span>
