--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-gray-100 flex items-center justify-center p-6">
+<div class="flex items-start justify-center p-6">
     <form [formGroup]="registerForm" (ngSubmit)="onSubmit()"
         class="bg-white shadow-xl rounded-2xl p-10 w-full max-w-4xl space-y-6">
         <h2 class="text-3xl font-bold text-center text-gray-800">Create Account</h2>
