Added Some pages and user types

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,7 +1,10 @@
 <footer class="bg-blue-900 shadow-lg">
-    <div class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-end md:justify-center">
-        <span class="text-sm text-white sm:text-center">© {{ date }} <a routerLink="/"
-                class="hover:underline">E-Learning</a>. All Rights Reserved.
-        </span>
-    </div>
+  <div
+    class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-end md:justify-center"
+  >
+    <span class="text-sm text-white sm:text-center"
+      >© {{ date }} <a routerLink="/" class="hover:underline">E-Learning</a>.
+      All Rights Reserved.
+    </span>
+  </div>
 </footer>
