--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -5,7 +5,131 @@
 >
   <div class="h-full px-3 pb-4 overflow-y-auto bg-blue-900">
     <ul class="space-y-2 font-medium">
+      @if (userType === 'admin') {
       <li>
+        <a
+          routerLink="/admin/instructors"
+          routerLinkActive="bg-blue-700"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">Instructors</span>
+        </a>
+      </li>
+      <li>
+        <a
+          routerLink="/admin/students"
+          routerLinkActive="bg-blue-700"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">Students</span>
+        </a>
+      </li>
+      <li>
+        <a
+          routerLink="/admin/courses"
+          routerLinkActive="bg-blue-700"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">Courses</span>
+        </a>
+      </li>
+      } @else if (userType === 'student') {
+      <li>
+        <a
+          routerLink="/student/courses"
+          routerLinkActive="bg-blue-700"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">Courses</span>
+        </a>
+      </li>
+
+      } @else if (userType === 'instructor') {
+      <li>
+        <a
+          routerLink="/instructor/courses"
+          routerLinkActive="bg-blue-700"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">Courses</span>
+        </a>
+      </li>
+
+      }
+      <!-- <li>
         <a
           href="#"
           class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
@@ -158,7 +282,7 @@
           </svg>
           <span class="flex-1 ms-3 whitespace-nowrap">Sign Up</span>
         </a>
-      </li>
+      </li> -->
     </ul>
   </div>
 </aside>
