--- a/src/app/layout/splash/splash.component.html
+++ b/src/app/layout/splash/splash.component.html
@@ -1,7 +1,11 @@
 <div id="splash-screen" class="splash-screen bg-blue-900">
-    <div class="splash-content">
-        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png" alt="E-Learning Logo" class="splash-logo" />
-        <h1 class="splash-title">Welcome to E-Learning</h1>
-        <p class="splash-subtitle">Empower your future through education</p>
-    </div>
+  <div class="splash-content">
+    <img
+      src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png"
+      alt="E-Learning Logo"
+      class="splash-logo"
+    />
+    <h1 class="splash-title">Welcome to E-Learning</h1>
+    <p class="splash-subtitle">Empower your future through education</p>
+  </div>
 </div>
