--- a/src/app/layout/instructor-layout/instructor-layout.component.html
+++ b/src/app/layout/instructor-layout/instructor-layout.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
+<app-sidebar [userType]="'instructor'"></app-sidebar>
 <div class="flex flex-col min-h-screen">
   <div class="p-4 sm:ml-64 flex-grow">
     <div class="p-4 mt-14">
