--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -7,7 +7,7 @@
           data-drawer-toggle="logo-sidebar"
           aria-controls="logo-sidebar"
           type="button"
-          class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
         >
           <span class="sr-only">Open sidebar</span>
           <svg
@@ -24,7 +24,7 @@
             ></path>
           </svg>
         </button>
-        <a class="flex ms-2 md:me-24">
+        <a routerLink="/" class="flex ms-2 md:me-24">
           <img
             src="https://cdn-icons-png.flaticon.com/512/3135/3135755.png"
             class="h-8 me-3"
@@ -41,7 +41,7 @@
           <div>
             <button
               type="button"
-              class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
+              class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300"
               aria-expanded="false"
               data-dropdown-toggle="dropdown-user"
             >
@@ -54,25 +54,20 @@
             </button>
           </div>
           <div
-            class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-sm shadow-sm dark:bg-gray-700 dark:divide-gray-600"
+            class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-sm shadow-sm"
             id="dropdown-user"
           >
             <div class="px-4 py-3" role="none">
-              <p class="text-sm text-gray-900 dark:text-white" role="none">
-                Neil Sims
-              </p>
-              <p
-                class="text-sm font-medium text-gray-900 truncate dark:text-gray-300"
-                role="none"
-              >
-                neil.simsSflowbite.com
+              <p class="text-sm text-gray-900" role="none">Neil Sims</p>
+              <p class="text-sm font-medium text-gray-900 truncate" role="none">
+                neil.sims&#64;flowbite.com
               </p>
             </div>
             <ul class="py-1" role="none">
               <li>
                 <a
                   href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   >Dashboard</a
                 >
@@ -80,7 +75,7 @@
               <li>
                 <a
                   href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   >Settings</a
                 >
@@ -88,7 +83,7 @@
               <li>
                 <a
                   href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   >Earnings</a
                 >
@@ -96,7 +91,7 @@
               <li>
                 <a
                   href="#"
-                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+                  class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100"
                   role="menuitem"
                   >Sign out</a
                 >
