Changed Layout For Mobile Screens

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,17 +1,18 @@
-<nav class="fixed top-0 z-50 w-full bg-blue-900">
+<nav class="fixed top-0 z-50 w-full bg-blue-900 shadow-xl">
   <div class="px-3 py-3 lg:px-5 lg:pl-3">
     <div class="flex items-center justify-between">
       <div class="flex items-center justify-start rtl:justify-end">
-        <button
+        <!-- <button
           data-drawer-target="logo-sidebar"
           data-drawer-toggle="logo-sidebar"
           aria-controls="logo-sidebar"
+          (click)="toggleSideBar()"
           type="button"
-          class="inline-flex items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+          class="inline-flex hover:!bg-blue-900 focus:border-red-500 cursor-pointer items-center p-2 text-sm text-gray-500 rounded-lg sm:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
         >
-          <span class="sr-only">Open sidebar</span>
+          <span class="sr-only" data-drawer-target="logo-sidebar" data-drawer-toggle="logo-sidebar" aria-controls="logo-sidebar" (click)="toggleSideBar()">Open sidebar</span>
           <svg
-            class="w-6 h-6"
+            class="w-6 h-6 text-white"
             aria-hidden="true"
             fill="currentColor"
             viewBox="0 0 20 20"
@@ -23,6 +24,9 @@
               d="M2 4.75A.75.75 0 012.75 4h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 4.75zm0 10.5a.75.75 0 01.75-.75h7.5a.75.75 0 010 1.5h-7.5a.75.75 0 01-.75-.75zM2 10a.75.75 0 01.75-.75h14.5a.75.75 0 010 1.5H2.75A.75.75 0 012 10z"
             ></path>
           </svg>
+        </button> -->
+        <button (click)="toggleSideBar()" class="flex sm:hidden items-center cursor-pointer">
+          <i class="fa-solid fa-bars block text-white text-xl"></i>
         </button>
         <a routerLink="/" class="flex ms-2 md:me-24">
           <img
@@ -37,8 +41,8 @@
         </a>
       </div>
       <div class="flex items-center">
-        <div class="flex items-center ms-3">
-          <div>
+        <div class="flex text-white text-xl cursor-pointer duration-300 hover:font-bold hover:text-red-600 items-center ms-3">
+          <!-- <div>
             <button
               type="button"
               class="flex text-sm bg-gray-800 rounded-full focus:ring-4 focus:ring-gray-300"
@@ -97,7 +101,8 @@
                 >
               </li>
             </ul>
-          </div>
+          </div> -->
+          Logout
         </div>
       </div>
     </div>
