--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,9 +1,13 @@
 <aside
   id="logo-sidebar"
-  class="fixed top-0 left-0 z-40 w-64 h-screen pt-20 transition-transform -translate-x-full bg-blue-900 sm:translate-x-0"
+  class="fixed top-0 shadow-xl left-0 z-40 w-50 h-screen pt-20 transition-transform bg-blue-900"
+  [class]="{
+    'sm:translate-x-0': isSidebarVisible(),
+    '-translate-x-full': !isSidebarVisible()
+  }"
   aria-label="Sidebar"
 >
-  <div class="h-full px-3 pb-4 overflow-y-auto bg-blue-900">
+  <div class="h-full px-3 shadow-xl pb-4 overflow-y-auto bg-blue-900">
     <ul class="space-y-2 font-medium">
       @if (userType === 'admin') {
       <li>
