--- a/src/app/layout/auth-layout/auth-layout.component.html
+++ b/src/app/layout/auth-layout/auth-layout.component.html
@@ -1,7 +1,6 @@
 <app-navbar></app-navbar>
-<app-sidebar></app-sidebar>
 <div class="flex flex-col min-h-screen">
-  <div class="p-4 sm:ml-64 flex-grow">
+  <div class="p-4 flex-grow">
     <div class="p-4 mt-14">
       <router-outlet></router-outlet>
     </div>
