--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -3,7 +3,7 @@
     class="w-full mx-auto max-w-screen-xl p-4 flex items-center justify-end md:justify-center"
   >
     <span class="text-sm text-white sm:text-center"
-      >© {{ date }} <a routerLink="/" class="hover:underline">E-Learning</a>.
+      >© {{ date }} <a routerLink="/" class="hover:underline">Academia_Hub</a>.
       All Rights Reserved.
     </span>
   </div>
