--- a/src/app/layout/teacher-layout/teacher-layout.component.html
+++ b/src/app/layout/teacher-layout/teacher-layout.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-<app-sidebar [userType]="'instructor'"></app-sidebar>
+<app-sidebar [userType]="'teacher'"></app-sidebar>
 <div class="flex flex-col min-h-screen">
   <div class="p-4 sm:ml-64 flex-grow">
     <div class="p-4 mt-14">
@@ -8,3 +8,4 @@
   </div>
   <app-footer></app-footer>
 </div>
+8
