--- a/src/app/pages/auth-pages/register/register.component.html
+++ b/src/app/pages/auth-pages/register/register.component.html
@@ -2,30 +2,28 @@
   <form
     [formGroup]="registerForm"
     (ngSubmit)="onSubmit()"
-    class="bg-white shadow-xl rounded-2xl p-10 w-full max-w-4xl space-y-6"
+    class="bg-white shadow-2xl rounded-2xl p-10 w-full max-w-4xl space-y-6"
   >
     <h2 class="text-3xl font-bold text-center text-gray-800">Create Account</h2>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-      <!-- Username -->
+      <!-- Name -->
       <div>
-        <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Username</label
-        >
+        <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
         <input
           type="text"
-          formControlName="username"
-          placeholder="Enter username"
+          formControlName="name"
+          placeholder="Enter Your Name"
           class="w-full px-4 py-2 border rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
         />
         <p
           *ngIf="
-            registerForm.get('username')?.touched &&
-            registerForm.get('username')?.invalid
+            registerForm.get('name')?.touched &&
+            registerForm.get('name')?.invalid
           "
           class="text-red-600 text-xs mt-1"
         >
-          Username is required.
+          Name is required (Min Len 6).
         </p>
       </div>
 
@@ -193,7 +191,8 @@
           >National ID</label
         >
         <input
-          type="number"
+          type="text"
+          (keypress)="allowOnlyNumbers($event)"
           formControlName="nationalId"
           placeholder="14-digit National ID"
           class="w-full px-4 py-2 border rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -215,7 +214,8 @@
           >Phone Number</label
         >
         <input
-          type="number"
+          type="text"
+          (keypress)="allowOnlyNumbers($event)"
           formControlName="phoneNumber"
           placeholder="11-digit Phone Number"
           class="w-full px-4 py-2 border rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
@@ -228,6 +228,53 @@
           class="text-red-600 text-xs mt-1"
         >
           Phone Number must be 11 digits.
+        </p>
+      </div>
+
+      <!-- Address -->
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1"
+          >Address</label
+        >
+        <input
+          type="text"
+          formControlName="address"
+          placeholder="Enter Your Address"
+          class="w-full px-4 py-2 border rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+        />
+        <p
+          *ngIf="
+            registerForm.get('address')?.touched &&
+            registerForm.get('address')?.invalid
+          "
+          class="text-red-600 text-xs mt-1"
+        >
+          Address is required (Min Len 6).
+        </p>
+      </div>
+
+      <!-- Gender -->
+      <div>
+        <label class="block text-sm font-medium text-gray-700 mb-1"
+          >Gender</label
+        >
+        <select
+          title="gender"
+          formControlName="gender"
+          class="w-full px-4 py-2 border rounded-lg text-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+          <option value="" disabled>Select Your Gender</option>
+          <option value="male">Male</option>
+          <option value="female">Female</option>
+        </select>
+        <p
+          *ngIf="
+            registerForm.get('gender')?.touched &&
+            registerForm.get('gender')?.invalid
+          "
+          class="text-red-600 text-xs mt-1"
+        >
+          Gender is required.
         </p>
       </div>
 
@@ -262,5 +309,12 @@
     >
       Register
     </button>
+    <div>
+      <a
+        class="text-blue-800 text-lg duration-200 hover:underline"
+        routerLink="/auth/login"
+        >Have an account? Login.</a
+      >
+    </div>
   </form>
 </div>
