Added Classrooms Services

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -17,7 +17,7 @@
             alt="FlowBite Logo"
           />
           <span
-            class="self-center text-white text-xl font-semibold sm:text-2xl whitespace-nowrap"
+            class="self-center text-white text-xl font-bold whitespace-nowrap"
             >Academia_Hub</span
           >
         </a>
