--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
 <aside
   id="logo-sidebar"
-  class="fixed top-0 shadow-xl left-0 z-40 w-50 h-screen pt-20 transition-transform bg-blue-900"
+  class="fixed top-0 shadow-xl left-0 z-40 w-55 h-screen pt-20 transition-transform bg-blue-900"
   [class]="{
     'sm:translate-x-0': isSidebarVisible(),
     '-translate-x-full': !isSidebarVisible()
@@ -83,7 +83,7 @@
       } @else if (userType === 'student') {
       <li>
         <a
-          routerLink="/student/courses"
+          routerLink="/student/classrooms"
           routerLinkActive="bg-blue-700"
           [routerLinkActiveOptions]="{ exact: true }"
           class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
@@ -102,7 +102,31 @@
               d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
             />
           </svg>
-          <span class="ms-3">Courses</span>
+          <span class="ms-3">All Classrooms</span>
+        </a>
+      </li>
+      <li>
+        <a
+          routerLink="/student/my-classrooms"
+          routerLinkActive="bg-blue-700"
+          [routerLinkActiveOptions]="{ exact: true }"
+          class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
+        >
+          <svg
+            class="w-5 h-5 text-white transition duration-75"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="currentColor"
+            viewBox="0 0 22 21"
+          >
+            <path
+              d="M16.975 11H10V4.025a1 1 0 0 0-1.066-.998 8.5 8.5 0 1 0 9.039 9.039.999.999 0 0 0-1-1.066h.002Z"
+            />
+            <path
+              d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
+            />
+          </svg>
+          <span class="ms-3">My Classrooms</span>
         </a>
       </li>
 
