--- a/src/app/pages/auth-pages/login/login.component.html
+++ b/src/app/pages/auth-pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-start justify-center p-6">
+<div class="flex items-start justify-center">
   <form
     [formGroup]="loginForm"
     (ngSubmit)="onSubmit()"
