--- a/src/app/pages/student-pages/my-classrooms/my-classrooms.component.html
+++ b/src/app/pages/student-pages/my-classrooms/my-classrooms.component.html
@@ -1,13 +1,13 @@
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
   <!-- The @for loop starts here -->
-  @for (course of courses; track $index) {
+  @for (classroom of classRooms; track $index) {
   <!-- 1. Make the card a flex container that lays out its children in a column -->
   <div class="flex flex-col border border-gray-200 rounded-lg shadow-sm">
     <a class="block">
       <!-- The image is a flex item -->
       <img
         class="rounded-t-lg w-full h-[250px]"
-        [src]="getRandomImage(course)"
+        [src]="getRandomImage(classroom)"
         alt=""
       />
     </a>
@@ -15,24 +15,11 @@
     <div class="p-5 flex flex-col flex-grow">
       <a class="block">
         <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900">
-          {{ course.name }}
+          {{ classroom.name }}
         </h5>
       </a>
-      <p class="mb-3 font-normal text-gray-700">{{ course.description }}</p>
+      <p class="mb-3 font-normal text-gray-700">{{ classroom.description }}</p>
 
-      <!-- 3. Add `mt-auto` here. This pushes this div to the very bottom of the flex container -->
-      <div class="flex flex-wrap gap-3 items-center mt-auto">
-        <input
-          type="text"
-          class="border border-gray-300 rounded-lg w-[75%] p-2"
-          placeholder="Enter Code"
-        />
-        <button
-          class="bg-blue-900 cursor-pointer hover:bg-blue-800 text-white rounded-lg px-4 py-2"
-        >
-          Register
-        </button>
-      </div>
     </div>
   </div>
   }
