--- a/src/app/layout/blank-layout/blank-layout.component.html
+++ b/src/app/layout/blank-layout/blank-layout.component.html
@@ -25,7 +25,7 @@
               class="flex flex-col sm:flex-row gap-4 justify-center md:justify-start"
             >
               <a
-                routerLink="/auth/login"
+                [routerLink]="route"
                 class="bg-blue-600 cursor-pointer text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-blue-700 transition-transform transform hover:scale-105"
               >
                 Get Started For Free
