--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -28,7 +28,7 @@
           (click)="logout()"
           class="flex text-white text-xl cursor-pointer duration-300 hover:font-bold hover:text-red-600 items-center ms-3"
         >
-          <button class="cursor-pointer">Logout</button>
+          <button class="cursor-pointer">Logout <i class="fa fa-sign-out"></i> </button>
         </div>
       </div>
       }
