--- a/src/app/pages/auth-pages/login/login.component.html
+++ b/src/app/pages/auth-pages/login/login.component.html
@@ -10,7 +10,7 @@
       <!-- Email -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Email</label
+          ><i class="fa-solid fa-envelope"></i> Email</label
         >
         <input
           type="email"
@@ -31,7 +31,7 @@
       <!-- Password -->
       <div class="relative">
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Password</label
+          ><i class="fa-solid fa-lock"></i> Password</label
         >
         <input
           [type]="showPassword ? 'text' : 'password'"
@@ -99,7 +99,7 @@
       type="submit"
       class="w-full bg-blue-900 cursor-pointer hover:bg-blue-800 text-white font-semibold py-3 rounded-lg text-lg transition-all"
     >
-      Login
+      Login <i class="fa fa-sign-in"></i>
     </button>
     <div>
       <a
