--- a/src/app/pages/auth-pages/register/register.component.html
+++ b/src/app/pages/auth-pages/register/register.component.html
@@ -9,7 +9,9 @@
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <!-- Name -->
       <div>
-        <label class="block text-sm font-medium text-gray-700 mb-1">Name</label>
+        <label class="block text-sm font-medium text-gray-700 mb-1"
+          ><i class="fa-solid fa-signature"></i> Name
+        </label>
         <input
           type="text"
           formControlName="name"
@@ -30,8 +32,8 @@
       <!-- Email -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Email</label
-        >
+          ><i class="fa-solid fa-envelope"></i> Email
+        </label>
         <input
           type="email"
           formControlName="email"
@@ -52,8 +54,8 @@
       <!-- Password -->
       <div class="relative">
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Password</label
-        >
+          ><i class="fa-solid fa-lock"></i> Password
+        </label>
         <input
           [type]="showPassword ? 'text' : 'password'"
           formControlName="password"
@@ -117,8 +119,8 @@
       <!-- Confirm Password -->
       <div class="relative">
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Confirm Password</label
-        >
+          ><i class="fa-solid fa-lock"></i> Confirm Password
+        </label>
         <input
           [type]="showConfirmPassword ? 'text' : 'password'"
           formControlName="confirmPassword"
@@ -188,8 +190,8 @@
       <!-- National ID -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >National ID</label
-        >
+          ><i class="fa-solid fa-address-card"></i> National ID
+        </label>
         <input
           type="text"
           (keypress)="allowOnlyNumbers($event)"
@@ -211,8 +213,8 @@
       <!-- Phone Number -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Phone Number</label
-        >
+          ><i class="fa fa-phone"></i> Phone Number
+        </label>
         <input
           type="text"
           (keypress)="allowOnlyNumbers($event)"
@@ -234,8 +236,8 @@
       <!-- Address -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Address</label
-        >
+          ><i class="fa-solid fa-location-dot"></i> Address
+        </label>
         <input
           type="text"
           formControlName="address"
@@ -256,8 +258,8 @@
       <!-- Gender -->
       <div>
         <label class="block text-sm font-medium text-gray-700 mb-1"
-          >Gender</label
-        >
+          ><i class="fa-solid fa-user"></i> Gender
+        </label>
         <select
           title="gender"
           formControlName="gender"
@@ -307,7 +309,7 @@
       type="submit"
       class="w-full bg-blue-900 cursor-pointer hover:bg-blue-800 text-white font-semibold py-3 rounded-lg text-lg transition-all"
     >
-      Register
+      Register <i class="fa fa-sign-in"></i>
     </button>
     <div>
       <a
