--- a/src/app/layout/sidebar/sidebar.component.html
+++ b/src/app/layout/sidebar/sidebar.component.html
@@ -156,7 +156,7 @@
       } @else if (userType === 'teacher') {
       <li>
         <a
-          routerLink="/instructor/courses"
+          routerLink="/teacher/classroom"
           routerLinkActive="bg-blue-700"
           [routerLinkActiveOptions]="{ exact: true }"
           class="flex items-center p-2 text-white rounded-lg hover:bg-blue-700 group"
@@ -175,7 +175,7 @@
               d="M12.5 0c-.157 0-.311.01-.565.027A1 1 0 0 0 11 1.02V10h8.975a1 1 0 0 0 1-.935c.013-.188.028-.374.028-.565A8.51 8.51 0 0 0 12.5 0Z"
             />
           </svg>
-          <span class="ms-3">Courses</span>
+          <span class="ms-3">Classroom</span>
         </a>
       </li>
 
