--- a/src/app/pages/admin-pages/classrooms/classrooms.component.html
+++ b/src/app/pages/admin-pages/classrooms/classrooms.component.html
@@ -60,12 +60,21 @@
           </p>
         </div>
         <!-- Card Footer with Subject Badge -->
-        <div class="mt-auto pt-4 border-t border-gray-100">
+        <div
+          class="mt-auto flex flex-wrap gap-1 justify-between pt-4 border-t border-gray-100"
+        >
           <span
-            class="bg-blue-100 text-blue-800 text-xs font-medium px-2.5 py-1 rounded-full"
+            class="bg-blue-900 text-white flex items-center text-xs font-medium px-2.5 py-1 rounded-full"
           >
             {{ classroom.subjectName }}
           </span>
+          <div (click)="openTeacherModal(classroom.id)">
+            <button
+              class="bg-blue-900 flex items-center gap-1 py-1 px-3 rounded-lg cursor-pointer text-white"
+            >
+              <i class="fa fa-user"></i>Add Teacher
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -295,6 +304,116 @@
           Add New Classroom
         </button>
       </form>
+    </div>
+  </div>
+</div>
+
+<!-- Teacher modal -->
+<div
+  *ngIf="teacherModal()"
+  class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-gray-900 bg-opacity-50"
+>
+  <div class="relative w-full max-w-md max-h-full">
+    <!-- Modal content -->
+    <div class="relative bg-white rounded-lg shadow">
+      <!-- Modal header -->
+      <div
+        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t border-gray-200"
+      >
+        <h3 class="text-lg font-semibold text-gray-900">
+          Add Teacher to Classroom
+        </h3>
+        <button
+          (click)="closeTeacherModal()"
+          type="button"
+          class="text-gray-400 cursor-pointer bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+        >
+          <svg
+            class="w-3 h-3"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 14 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+            />
+          </svg>
+          <span class="sr-only">Close modal</span>
+        </button>
+      </div>
+      <!-- Modal body -->
+      <div class="p-4 md:p-5">
+        <div class="">
+          <form
+            [formGroup]="addTeacherForm"
+            class=""
+            (ngSubmit)="addTeacherToClassroom()"
+          >
+            <div class="grid gap-4 mb-4 grid-cols-2">
+              <div class="col-span-2">
+                <label
+                  for="teacher"
+                  class="block mb-2 text-sm font-medium text-gray-900"
+                >
+                  Teacher
+                </label>
+                <select
+                  id="teacher"
+                  formControlName="teacherId"
+                  class="bg-gray-50 cursor-pointer border text-gray-900 text-sm rounded-lg block w-full p-2.5"
+                  [ngClass]="{
+                    'border-gray-300 focus:ring-blue-500 focus:border-blue-500':
+                      !addTeacherForm.get('teacherId')?.invalid,
+                    'border-red-500 focus:ring-red-500 focus:border-red-500':
+                      addTeacherForm.get('teacherId')?.invalid &&
+                      (addTeacherForm.get('teacherId')?.dirty ||
+                        addTeacherForm.get('teacherId')?.touched)
+                  }"
+                >
+                  <option value="" disabled>Select Teacher</option>
+                  @for (teacher of teachers; track $index) {
+                  <option [value]="teacher.id">{{ teacher.name }}</option>
+                  }
+                </select>
+
+                <div
+                  *ngIf="
+                    addTeacherForm.get('teacherId')?.invalid &&
+                    (addTeacherForm.get('teacherId')?.dirty ||
+                      addTeacherForm.get('teacherId')?.touched)
+                  "
+                  class="mt-1 text-xs text-red-600"
+                >
+                  Please select a teacher.
+                </div>
+              </div>
+            </div>
+            <button
+              [disabled]="addTeacherForm.invalid"
+              type="submit"
+              class="text-white cursor-pointer w-full inline-flex items-center justify-center bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center disabled:bg-blue-400 disabled:cursor-not-allowed"
+            >
+              <svg
+                class="me-1 -ms-1 w-5 h-5"
+                fill="currentColor"
+                viewBox="0 0 20 20"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M10 5a1 1 0 011 1v3h3a1 1 0 110 2h-3v3a1 1 0 11-2 0v-3H6a1 1 0 110-2h3V6a1 1 0 011-1z"
+                  clip-rule="evenodd"
+                ></path>
+              </svg>
+              Add Teacher
+            </button>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 </div>
