--- a/src/app/pages/student-pages/my-classrooms/my-classrooms.component.html
+++ b/src/app/pages/student-pages/my-classrooms/my-classrooms.component.html
@@ -19,7 +19,10 @@
         </h5>
       </a>
       <p class="mb-3 font-normal text-gray-700">{{ classroom.description }}</p>
-
+      <span
+        class="bg-blue-900 text-white w-fit flex items-center text-xs font-medium px-2.5 py-1 rounded-full"
+        >{{ classroom.subjectName }}</span
+      >
     </div>
   </div>
   }
