--- a/src/app/pages/teacher-pages/classroom/classroom.component.html
+++ b/src/app/pages/teacher-pages/classroom/classroom.component.html
@@ -1,3 +1,4 @@
+@if (classroom) {
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
   <!-- The @for loop starts here -->
   <!-- @for (course of courses; track $index) { -->
@@ -24,3 +25,5 @@
   <!-- } -->
   <!-- The @for loop ends here -->
 </div>
+
+}
